[package]
name = "grpc-rust-with-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = [ "full" ] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["parking_lot", "env-filter"] }
parking_lot = "0.12.1"
grpc = "0.8.3"
